--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <nav class="navbar navbar-inverse">
+            <div class="container">
+                <a class="btn btn-default navbar-btn" href="/">Home</a>
+                <a class="btn btn-default navbar-btn" href="/hue-status">HUE Status</a>
+            </div>
+        </nav>
         <div class="container">
             {% block container %}{% endblock %}
         </div>
