--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container">
                 <a class="btn btn-default navbar-btn" href="/">Home</a>
-                <a class="btn btn-default navbar-btn" href="/hue-status">HUE Status</a>
+                <a class="btn btn-default navbar-btn" href="/hue">HUE Status</a>
             </div>
         </nav>
         <div class="container">
