--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container">
                 <a class="btn btn-default navbar-btn" href="/">Home</a>
+                <a class="btn btn-default navbar-btn" href="/set-state">Set State</a>
                 <a class="btn btn-default navbar-btn" href="/hue">HUE Status</a>
             </div>
         </nav>
