--- a/templates/set-state.html
+++ b/templates/set-state.html
@@ -2,8 +2,7 @@
 {% block container %}
     <h1>Set Home State</h1>
     <p>Select a state</p>
-    <a class="btn btn-default btn-lg btn-block" href="/set-state/normal" role="button">Normal</a>
-    <a class="btn btn-default btn-lg btn-block" href="/set-state/movie" role="button">Movie</a>
-    <a class="btn btn-default btn-lg btn-block" href="/set-state/bed" role="button">Bed</a>
-    <a class="btn btn-default btn-lg btn-block" href="/set-state/off" role="button">Off</a>
+    {% for state in states %}
+    <a class="btn btn-{% if active_state == state|lower %}primary{% else %}default{% endif %} btn-lg btn-block" href="/set-state/{{ state|lower }}" role="button">{{ state }}</a>
+    {% endfor %}
 {% endblock %}
