Add page for manual switch control

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
                 <a class="btn btn-default navbar-btn" href="/">Home</a>
                 <a class="btn btn-default navbar-btn" href="/set-state">Set State</a>
                 <a class="btn btn-default navbar-btn" href="/hue">HUE Status</a>
+                <a class="btn btn-default navbar-btn" href="/switch">Switch</a>
             </div>
         </nav>
         <div class="container">
