--- a/templates/log.html
+++ b/templates/log.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block container %}
-    <h1>Switch</h1>
+    <h1>Logs</h1>
     <table class="table">
         <tr>
             <th>Log</th>
