--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
                 <a class="btn btn-default navbar-btn" href="/set-state">Set State</a>
                 <a class="btn btn-default navbar-btn" href="/hue">HUE Status</a>
                 <a class="btn btn-default navbar-btn" href="/switch">Switch</a>
+                <a class="btn btn-default navbar-btn" href="/sonos">Sonos</a>
                 <a class="btn btn-default navbar-btn" href="/log">Log</a>
             </div>
         </nav>
