--- a/templates/hue-status.html
+++ b/templates/hue-status.html
@@ -11,6 +11,8 @@
             <th>Colortemp</th>
             <th>Brightness</th>
             <th>Hue</th>
+            <th>Color</th>
+            <th>Lock</th>
             <th>On</th>
             <th>Reachable</th>
         </tr>
@@ -23,13 +25,17 @@
                 <tr>
             {% endif %}
                 <td>{{ lamp.light_id }}</td>
-                <td>{{ lamp.name }}</td>
+                <td class="light_name">{{ lamp.name }}</td>
                 <td>{{ lamp.colormode }}</td>
                 <td>{{ lamp.saturation }}</td>
                 <td>{{ lamp.xy }}</td>
-                <td>{{ lamp.colortemp }}</td>
+                <td>{% if lamp.light_id == 13 %}?{% else %}{{ lamp.colortemp }}{% endif %}</td>
                 <td>{{ lamp.brightness }}</td>
                 <td>{{ lamp.hue }}</td>
+                <td><input type='text' class="lamp_hue"
+                    id="lamp_hue_{{ lamp.light_id }}"
+                    value="hsl({{ (360 * (lamp.hue / 65535))|int }}, {{ (lamp.saturation / 254)|int }}, 1.0)" /></td>
+                <td><input type="checkbox" class="lamp_lock"/></td>
                 <td>{{ lamp.on }}</td>
                 <td>{{ lamp.reachable }}</td>
             </tr>
