--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,10 +2,15 @@
 <html lang="en">
     <head>
         <title>IOT Home Control</title>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src='/static/spectrum.js'></script>
+        <link rel='stylesheet' href='/static/spectrum.css' />
+        <script src='/static/tinycolor.js'></script>
+        <script src='/static/scripts.js'></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse">
